2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs:
	* CamelliaTransform64LE.cs: 基底クラスのコンストラクタインターフェイス変更に対応

2006-12-10  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransformLE.cs:
	* CamelliaTransform64LE.cs:
	* CamelliaTransformBE.cs: Camellia.NETのrev.38のバグ修正パッチを適用

2006-12-03  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransformBE.cs: 改行コードを修正

2006-12-03  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransformBE.cs: 改行コードを修正

2006-11-28  Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Camellia.cs:
	* CamelliaManaged.cs:
	* CamelliaTransform.cs:
	* CamelliaTransform64LE.cs:
	* CamelliaTransformBE.cs:
	* CamelliaTransformLE.cs: Camellia.NETから移植