@@ -1,3 +1,7 @@
+2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* CamelliaManaged.cs: 指定された実装タイプを保持しているか確認するメソッドを実装
+
 2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* CamelliaTransform.cs:
